force-app/main/default/objects/Trace_Account_Mapping__c/Trace_Account_Mapping__c.object-meta.xml
<CustomObject>
    <label>Trace Account Mapping</label>
    <nameField>
        <label>Trace Account Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trace Account Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>