force-app/main/default/objects/Trace_Account_Mapping__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trace Account Mappings</relationshipLabel>
    <relationshipName>Trace_Account_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>