force-app/main/default/objects/Trace_Account_Mapping__c/fields/Contract_Names_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Contract_Names_Numbers__c</fullName>
    <label>Contract Names / Numbers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>