force-app/main/default/objects/Trace_Account_Mapping__c/fields/Invoice_Year__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Year__c</fullName>
    <label>Invoice Year</label>
    <length>100</length>
    <type>Text</type>
</CustomField>