force-app/main/default/objects/Trace_Account_Mapping__c/fields/Ship_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Name__c</fullName>
    <label>Ship To Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>