force-app/main/default/objects/Trace_Account_Mapping__c/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <label>Total Revenue</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>