force-app/main/default/objects/Trace_Account_Mapping__c/fields/Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_ID__c</fullName>
    <description>Distributor+Customer+Zip Code</description>
    <externalId>true</externalId>
    <label>Unique ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>